refactor: CORS/Authorization config.